# news-manager

./: .env-example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lint.yml  tests.yml
accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
accounts/management/commands/: seed_groups.py
accounts/migrations/: 0001_initial.py  0002_plan_vertical_userprofile_plan_verticals.py  0003_plan_is_pro_user_plan_alter_plan_name_and_more.py  0004_alter_user_managers.py  0005_alter_vertical_name.py  0006_alter_plan_name.py  0007_alter_plan_name.py
news/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_options_alter_news_published_date.py  0002_news_is_pro_news_vertical.py  0003_alter_news_image.py
news_manager/: asgi.py  settings.py  urls.py  wsgi.py
