[project]
name = "news-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1,<6.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "djangorestframework>=3.16.0,<4.0.0",
    "pillow>=11.2.1,<12.0.0",
    "drf-spectacular>=0.28.0,<0.29.0",
    "pyyaml>=6.0.2,<7.0.0",
    "djangorestframework-simplejwt>=5.5.0,<6.0.0",
    "django-cors-headers>=4.7.0,<5.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
pre-commit = "^4.2.0"
pytest = "^7.4.3"
pylint = "^3.0.2"
pytest-django = "^4.5"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "news_manager.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
